<resources>
    <string name="app_name">Epod</string>
    <string name="homepage_info1">Hello,Joseph</string>
    <string name="homepage_info2">things look very good</string>
    <string name="homepage_info3">keep it!</string>
    <string name="create_plan">Create your plan</string>
    <string name="connect_equipment">CONNECT HOMEGYM</string>
    <string name="start_training">START TRAINING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="free_mode">Free mode</string>
    <string name="select_training_body">Please select body which you would like to training</string>
    <string name="select_training_equipment">Please select the training equipment</string>
    <string name="selected_someone">Training your </string>
    <string name="upper_body">upper body</string>
    <string name="lower_body">lower body</string>
    <string name="chest_body">chest</string>
    <string name="core_body">core</string>
    <string name="dumbbell">dumbbell</string>
    <string name="homegym">Homegym ring-pull</string>
    <string name="rope_skipping">rope skipping</string>
    <string name="hold_on">Keep holding on!</string>
    <string name="training_time">Training time:</string>
    <string name="weight_level">LEVEL</string>
    <string name="training_count">Total count:</string>
    <string name="hold_training">Continue Training</string>
    <string name="finish_training">Finish Training</string>
    <string name="training_record">The exercise records</string>
    <string name="training_time1">Exercise time</string>
    <string name="training_number">Exercise number</string>
    <string name="training_resistance">Exercise Resistance</string>
    <string name="tips1">Jie,Congratulations on your training,</string>
    <string name="tips2">one step closer to the perfect body!</string>
    <string name="count_down_tips">Free mode is not included in the total score.</string>
    <string name="home_page">Home</string>
    <string name="user_center">UserCenter</string>
    <string name="user_custom">Customization</string>
    <string name="user_challenge">Challenge</string>
    <string name="user_club">Club</string>
    <string name="ble_connected">CONNECTED</string>
    <string name="ble_unconnect">UNCONNECT</string>
    <string name="make_plan">Customize your fitness plan</string>
    <string name="welcome_tips">Hello,Jie,Welcome to Johnson fitness club.</string>
    <string name="free_training">Go on free training >>></string>
    <string name="add_plan">Add Plan</string>
    <string name="minutes">minutes</string>

    <string name="connect_ble_warning">You did not bind the Homegym device</string>
    <string name="connect_ble_tips">Connection failed, please try again</string>
    <string name="connect_ble_warning1">Now bind your device and start professional fitness</string>
    <string name="connect_ble_tips1">Successful connection</string>
    <string name="connect_ble_connect">CONNECT</string>


    <string name="scanning">scanning...</string>
    <string name="connecting">connecting...</string>
    <string name="disconnecting">disconnecting...</string>
    <string name="dev_conn_number">Connected device number：</string>

    <string name="class_detail">Class Detail</string>
    <string name="class_detail_time">time</string>
    <string name="class_detail_min">minute</string>

    <string name="tab_class">class</string>
    <string name="tab_dynamic">dynamic</string>
    <string name="tab_user">user</string>

    <string name="add_plan_title">My training program</string>
    <string name="add_plan_button">+ Add the course</string>
    <string name="recommended_course">Recommended course</string>
    <string name="list_class_title">Shoulder and arm exercises</string>
    <string name="all_browse">All browse</string>
    <string name="browse_way">Browse Way</string>
    <string name="core">core</string>
    <string name="arm">arm</string>
    <string name="hip">hip</string>
    <string name="minute">minutes</string>
    <string name="calorie">kilo calorie</string>
    <string name="junior">junior</string>
    <string name="medium">medium</string>
    <string name="senior">senior</string>
    <string name="toast_tip">Has been added to my plan</string>
    <string name="delete">delete</string>
    <string name="add_comment">comment</string>
    <string name="share">share</string>
    <string name="suggest_follow">suggest to follow</string>
    <string name="more">more</string>
    <string name="follow">follow</string>
    <string name="followed">followed</string>
    <string name="message">Message</string>
    <string name="system_notification">Notification</string>
    <string name="friend_message">Message</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="exercise_day">exercise(day)</string>
    <string name="exercise_min">exercise(minute)</string>
    <string name="burn_calories">burn(kcal)</string>
    <string name="chat">chat</string>
    <string name="send_moment">send moments</string>
    <string name="send">send</string>
    <string name="show_everything">show your change, show your exercise, show your experience, show your delicacies </string>
    <string name="pick">pick from alubm</string>
    <string name="camera">camera</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
</resources>
