<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jht.epod.activity.MessageActivity">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:tint="@color/colorBigFont"
            android:scaleType="centerInside"
            android:src="@drawable/class_detail_back"
            android:background="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/message"
            android:textColor="@color/colorBigFont"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMessageDividerLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">

            <TextView
                android:id="@+id/system_notification"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@drawable/system_notification_select"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:text="@string/system_notification"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="start|center_vertical">

            <TextView
                android:id="@+id/friend_message"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@drawable/friend_message_unselect"
                android:textSize="14sp"
                android:textColor="@color/colorButtonBg"
                android:text="@string/friend_message"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"/>

</LinearLayout>
