<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondBg"
    tools:context="com.jht.epod.activity.ClassClassifyActivity">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:tint="@color/colorBigFont"
            android:scaleType="centerInside"
            android:src="@drawable/class_detail_back"
            android:background="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/browse_way"
            android:textColor="@color/colorBigFont"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subtitle_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/core_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/core_tab_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:duplicateParentState="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/uptabtext_color"
                android:text="@string/core"/>

            <ImageView
                android:id="@+id/core_tab_pic"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:duplicateParentState="true"
                android:background="@drawable/uptab_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/arm_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/arm_tab_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:duplicateParentState="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/uptabtext_color"
                android:text="@string/arm"/>

            <ImageView
                android:id="@+id/arm_tab_pic"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:duplicateParentState="true"
                android:background="@drawable/uptab_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hip_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/hip_tab_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:duplicateParentState="true"
                android:text="@string/hip"
                android:textColor="@color/uptabtext_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/hip_tab_pic"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:duplicateParentState="true"
                android:background="@drawable/uptab_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/junior_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/junior_tab_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:duplicateParentState="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/uptabtext_color"
                android:text="@string/junior"/>

            <ImageView
                android:id="@+id/junior_tab_pic"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:duplicateParentState="true"
                android:background="@drawable/uptab_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/medium_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/medium_tab_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:duplicateParentState="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/uptabtext_color"
                android:text="@string/medium"/>

            <ImageView
                android:id="@+id/medium_tab_pic"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:duplicateParentState="true"
                android:background="@drawable/uptab_image"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/senior_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/senior_tab_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:duplicateParentState="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/uptabtext_color"
                android:text="@string/senior"/>

            <ImageView
                android:id="@+id/senior_tab_pic"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:duplicateParentState="true"
                android:background="@drawable/uptab_image"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/class_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:textColor="@color/colorClassCount"
        android:text="46个课程"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/class_count"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jht.epod.ui.MeasureListView
                android:id="@+id/list_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/colorSecondBg"
                android:dividerHeight="8dp">
            </com.jht.epod.ui.MeasureListView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
