<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_plan_tab"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/my_plan_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                android:background="@color/colorWhite"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/add_plan_title" />

                <Button
                    android:id="@+id/add_course_btn1"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/add_plan_button"
                    android:background="@drawable/add_plan_btn_big"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_plan_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorWhite"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/add_plan_title" />

                    <Button
                        android:id="@+id/add_course_btn2"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/add_plan_button"
                        android:background="@drawable/add_plan_btn_small"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondBg"/>

                <com.jht.epod.MeasureListView
                    android:id="@+id/my_class_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.jht.epod.MeasureListView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/recommended_course" />

                <com.jht.epod.MeasureListView
                    android:id="@+id/list_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">
                </com.jht.epod.MeasureListView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>